name:                coom-slackbots
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Andrea Jemmett
maintainer:          a.jemmett@coompany.eu
build-type:          Simple
cabal-version:       >=1.10

executable coom-slackbots
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       servant >= 0.9.1.1 && <0.10,
                       servant-server >= 0.9.1.1 && <0.10,
                       servant-client >= 0.9.1.1 && <0.10,
                       http-client, http-client-tls,
                       http-media,
                       aeson,
                       time,
                       warp,
                       text,
                       containers, unordered-containers,
                       transformers,
                       websockets, wuss,
                       network-uri
  hs-source-dirs:      src
  default-language:    Haskell2010
